--- a/src/main/java/com/blackflower/curriculumcreator/MainFrame.form
+++ b/src/main/java/com/blackflower/curriculumcreator/MainFrame.form
@@ -36,8 +36,8 @@
               <Component id="sideMenuPanel" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="mainPanel" pref="934" max="32767" attributes="0"/>
                   <Component id="headerPanel" max="32767" attributes="0"/>
-                  <Component id="mainPanel" pref="950" max="32767" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -47,7 +47,7 @@
           <Group type="102" attributes="0">
               <Component id="headerPanel" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-              <Component id="mainPanel" min="-2" pref="490" max="-2" attributes="0"/>
+              <Component id="mainPanel" max="32767" attributes="0"/>
           </Group>
           <Component id="sideMenuPanel" max="32767" attributes="0"/>
       </Group>
@@ -61,7 +61,10 @@
         </Property>
       </Properties>
 
-      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
+        <Property name="columns" type="int" value="0"/>
+        <Property name="rows" type="int" value="1"/>
+      </Layout>
     </Container>
     <Container class="javax.swing.JPanel" name="headerPanel">
 
@@ -83,12 +86,12 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="200" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="230" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="600" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
